# horo-tgbot-cpp

./: .gitignore  CMakeLists.txt  README.md
telegram/: HoroscopeAPI.cpp  HoroscopeAPI.h  TelegramAPI.cpp  TelegramAPI.h  TelegramBot.cpp  TelegramBot.h  main.cpp
